<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Generic -->
    <string name="app_name">Mix-IT 2012 NEW</string>
    <string name="permission_write">Modify MixIt schedule data</string>
    <string name="functionnality_need_connectivity">This functionnality need a connection</string>
    <!-- Errors -->
    <string name="error_initialization_application">An error has occurred while initializing the application</string>
    <string name="error_no_connectivity">No internet connectivity</string>
    <!-- Splashscreen -->
    <string name="progress_text">Initializing application</string>
    <!-- Home -->
    <string name="action_bar_account">My Account</string>
    <!-- Dashboard -->
    <string name="btn_schedule">Schedule</string>
    <string name="btn_stream">Stream</string>
    <string name="btn_sessions">Sessions</string>
    <string name="btn_members">Members</string>
    <string name="btn_starred">Starred</string>
    <string name="btn_map">Map</string>
    <!-- Sessions -->
    <string name="empty_sessions">No sessions found</string>
    <string name="session_details">Session</string>
    <string name="all_sessions">Sessions</string>
    <string name="all_lightning_talks">Lightning Talks</string>
    <string name="track_agility">Agility</string>
    <string name="track_techy">Techy</string>
    <string name="track_trendy">Trendy</string>
    <string name="track_gamy">Gamy</string>
    <string name="track_weby">Weby</string>
    <string name="session_summary_speakers">Speakers :</string>
    <string name="session_summary">Summary</string>
    <string name="session_comments">Comments</string>
    <string name="session_in_parallel">In Parallels</string>
    <string name="session_activities">Activities</string>
    <string name="session_interests">Interests</string>
    <string name="no_session_summary">No Summary for this Sessions</string>
    <string name="no_session_speakers">No Speaker for this Session</string>
    <string name="action_bar_share_with">Share with...</string>
    <string name="share_session_subject">Discover this talk at Mix-IT</string>
    <string name="share_session_text">Discover the talk \"%1$s\" at Mix-IT : %1$s</string>
    <string name="action_bar_vote_add">+1</string>
    <string name="action_bar_vote_delete">-1</string>
    <string name="action_bar_favorite_add">Add to favorite</string>
    <string name="action_bar_favorite_delete">Remove from favorite</string>
    <string name="error_vote_lightning_talk">Error while sending your vote/unvote request</string>
    <string name="error_star_session">Error while sending your star/unstar request</string>
    <string name="no_session">No Session Selected</string>
    <!-- Members -->
    <string name="empty_members">No members found</string>
    <string name="member_details">Member</string>
    <string name="all_members">Members</string>
    <string name="all_speakers">Speakers</string>
    <string name="member_desc">Bio</string>
    <string name="member_links">Links</string>
    <string name="member_linkers">Linkers</string>
    <string name="member_sessions">My Talks</string>
    <string name="member_lightnings">My Lightning\nTalks</string>
    <string name="member_starred_sessions">Starred\nSessions</string>
    <string name="member_interests">My Interests</string>
    <string name="member_shared_links">My Links</string>
    <string name="no_member_bio">No biography for this member</string>
    <string name="nb_consult">%d view(s)</string>
    <string name="no_member">No Member Selected</string>
    <string name="desc_member_image">Member\'s Image</string>
    <!-- Interests -->
    <string name="interest_details">Interest</string>
    <!-- Login -->
    <string name="login">Login</string>
    <string name="login_mixit_title">Login with your Mix-IT account</string>
    <string name="login_hint">Login</string>
    <string name="pass_hint">Password</string>
    <string name="login_bt">Login</string>
    <string name="login_google">Login with Google</string>
    <string name="login_twitter">Login with Twitter</string>
    <string name="select_android_account_title">Select an account to connect to Mix-IT</string>
    <string name="other_account">Connect with another account</string>
    <string name="android_accounts_error_ws">Error while trying to login to Mix-IT with your %1$s account</string>
    <string name="android_accounts_login_successful">Connecting to Mix-IT with your %1$s account : %2$s</string>
    <string name="login_oauth_failed">Error while connecting with your %1$s account</string>
    <string name="error_login">Error while connecting to your Mix-IT account</string>
    <string name="login_successful">Login with your Mix-IT account</string>
    <!-- Map -->
    <string name="map_title">Comment accéder au site?</string>
    <string name="access_title">Lieu :</string>
    <string name="access_content">SUPINFO LYON\n
Les Jardins d\'Osaka\n
16 Rue Jean Desparmet\n
69008 LYON\n
Nous vous convions à privilégier les transports en commun, les vélos ou la marche pour venir à la conférence. C\'est plus écologique et sachez aussi que les places de parking aux alentours de SUPINFO ne sont pas nombreuses!</string>
    <string name="mixit_map_url">http://www.mix-it.fr/infos/acces</string>
    <!-- About -->
    <string name="action_bar_about">About</string>
    <string name="about_text1">Source code created for the MixIt Conference by:</string>
    <string name="about_text2">Mathieu Calba\nmathieu.calba@gmail.com</string>
    <string name="about_text3">Source code available at https://github.com/jripault/mix-it-2012-android</string>
    <string name="about_text4">Version %s</string>
    <string name="about_text5">Uses some useful libraries :\n- ActionBarSherlock - http://actionbarsherlock.com/\n- Universal Image Loader - https://github.com/nostra13/Android-Universal-Image-Loader</string>
</resources>